// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modal no click overlay 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div>
      <p
        data-css-145tgfu=""
      >
        Macaroon danish I love candy macaroon danish toffee muffin. Cotton candy chupa chups cupcake I love. Chocolate I love bonbon carrot cake cupcake cookie muffin liquorice. I love I love I love jelly-o fruitcake 
        <a
          href="#"
        >
          I love chocolate cake
        </a>
         wafer chupa chups.
      </p>
      <p
        data-css-145tgfu=""
      >
        Sesame snaps cake pudding I love chupa chups I love. Cotton candy biscuit oat cake dessert donut I love lemon drops. Cookie croissant dragée tootsie roll marzipan I love. Apple pie cheesecake jelly-o cheesecake I love cheesecake.
      </p>
      <button
        data-css-k922kt=""
        disabled={false}
        onClick={[Function]}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          close modal
        </span>
      </button>
      <p
        data-css-145tgfu=""
      >
        Sweet soufflé 
        <a
          href="#"
        >
          apple pie
        </a>
        . Halvah icing pudding pastry ice cream gingerbread tart candy canes dragée. Pie gingerbread icing.
      </p>
      <div
        aria-label="Storybook Modal"
        data-css-17ouz8q=""
        id="psds-dialog__overlay"
        onClick={[Function]}
        role="region"
      >
        <div
          data-css-xf9ugk=""
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div>
            <button
              aria-label="Close dialog"
              data-css-1uhqcv0=""
              onClick={[Function]}
            >
              <svg
                aria-label="close icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
                />
              </svg>
            </button>
            <h1
              data-css-7941k5=""
              size="large"
            >
              Wowzers, a Dialog
            </h1>
            <p
              data-css-15w0yq1=""
            >
              <a
                href="#"
              >
                Brownie bear claw
              </a>
               liquorice dragée candy canes pastry topping. Chocolate cake soufflé sweet roll jelly beans oat cake donut. Wafer chocolate cake pastry chocolate bar fruitcake. Cupcake jelly-o croissant lollipop liquorice. 
              <a
                href="#"
              >
                Tart donut
              </a>
               lollipop dragée tootsie roll wafer lemon drops cupcake chocolate bar.
            </p>
            <p
              data-css-15w0yq1=""
            >
              Powder apple pie cookie lemon drops marzipan gummies. Chocolate lemon drops tiramisu. Cotton candy powder oat cake toffee
               
              <a
                href="#"
              >
                cotton candy
              </a>
               muffin soufflé marshmallow biscuit.
            </p>
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "flex-end",
                }
              }
            >
              <button
                data-css-r0o8hq=""
                disabled={false}
                style={Object {}}
              >
                <span
                  data-css-15b13by=""
                >
                  Secondary CTA
                </span>
              </button>
              <span
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              />
              <button
                data-css-k922kt=""
                disabled={false}
                style={Object {}}
              >
                <span
                  data-css-15b13by=""
                >
                  Primary CTA
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modal no close button 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div>
      <p
        data-css-145tgfu=""
      >
        Macaroon danish I love candy macaroon danish toffee muffin. Cotton candy chupa chups cupcake I love. Chocolate I love bonbon carrot cake cupcake cookie muffin liquorice. I love I love I love jelly-o fruitcake 
        <a
          href="#"
        >
          I love chocolate cake
        </a>
         wafer chupa chups.
      </p>
      <p
        data-css-145tgfu=""
      >
        Sesame snaps cake pudding I love chupa chups I love. Cotton candy biscuit oat cake dessert donut I love lemon drops. Cookie croissant dragée tootsie roll marzipan I love. Apple pie cheesecake jelly-o cheesecake I love cheesecake.
      </p>
      <button
        data-css-k922kt=""
        disabled={false}
        onClick={[Function]}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          close modal
        </span>
      </button>
      <p
        data-css-145tgfu=""
      >
        Sweet soufflé 
        <a
          href="#"
        >
          apple pie
        </a>
        . Halvah icing pudding pastry ice cream gingerbread tart candy canes dragée. Pie gingerbread icing.
      </p>
      <div
        aria-label="Storybook Modal"
        data-css-17ouz8q=""
        id="psds-dialog__overlay"
        onClick={[Function]}
        role="region"
      >
        <div
          data-css-xf9ugk=""
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div>
            <h1
              data-css-7941k5=""
              size="large"
            >
              Wowzers, a Dialog
            </h1>
            <p
              data-css-15w0yq1=""
            >
              <a
                href="#"
              >
                Brownie bear claw
              </a>
               liquorice dragée candy canes pastry topping. Chocolate cake soufflé sweet roll jelly beans oat cake donut. Wafer chocolate cake pastry chocolate bar fruitcake. Cupcake jelly-o croissant lollipop liquorice. 
              <a
                href="#"
              >
                Tart donut
              </a>
               lollipop dragée tootsie roll wafer lemon drops cupcake chocolate bar.
            </p>
            <p
              data-css-15w0yq1=""
            >
              Powder apple pie cookie lemon drops marzipan gummies. Chocolate lemon drops tiramisu. Cotton candy powder oat cake toffee
               
              <a
                href="#"
              >
                cotton candy
              </a>
               muffin soufflé marshmallow biscuit.
            </p>
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "flex-end",
                }
              }
            >
              <button
                data-css-r0o8hq=""
                disabled={false}
                style={Object {}}
              >
                <span
                  data-css-15b13by=""
                >
                  Secondary CTA
                </span>
              </button>
              <span
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              />
              <button
                data-css-k922kt=""
                disabled={false}
                style={Object {}}
              >
                <span
                  data-css-15b13by=""
                >
                  Primary CTA
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modal no escape key 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div>
      <p
        data-css-145tgfu=""
      >
        Macaroon danish I love candy macaroon danish toffee muffin. Cotton candy chupa chups cupcake I love. Chocolate I love bonbon carrot cake cupcake cookie muffin liquorice. I love I love I love jelly-o fruitcake 
        <a
          href="#"
        >
          I love chocolate cake
        </a>
         wafer chupa chups.
      </p>
      <p
        data-css-145tgfu=""
      >
        Sesame snaps cake pudding I love chupa chups I love. Cotton candy biscuit oat cake dessert donut I love lemon drops. Cookie croissant dragée tootsie roll marzipan I love. Apple pie cheesecake jelly-o cheesecake I love cheesecake.
      </p>
      <button
        data-css-k922kt=""
        disabled={false}
        onClick={[Function]}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          close modal
        </span>
      </button>
      <p
        data-css-145tgfu=""
      >
        Sweet soufflé 
        <a
          href="#"
        >
          apple pie
        </a>
        . Halvah icing pudding pastry ice cream gingerbread tart candy canes dragée. Pie gingerbread icing.
      </p>
      <div
        aria-label="Storybook Modal"
        data-css-17ouz8q=""
        id="psds-dialog__overlay"
        onClick={[Function]}
        role="region"
      >
        <div
          data-css-xf9ugk=""
          onKeyDown={[Function]}
        >
          <div>
            <button
              aria-label="Close dialog"
              data-css-1uhqcv0=""
              onClick={[Function]}
            >
              <svg
                aria-label="close icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
                />
              </svg>
            </button>
            <h1
              data-css-7941k5=""
              size="large"
            >
              Wowzers, a Dialog
            </h1>
            <p
              data-css-15w0yq1=""
            >
              <a
                href="#"
              >
                Brownie bear claw
              </a>
               liquorice dragée candy canes pastry topping. Chocolate cake soufflé sweet roll jelly beans oat cake donut. Wafer chocolate cake pastry chocolate bar fruitcake. Cupcake jelly-o croissant lollipop liquorice. 
              <a
                href="#"
              >
                Tart donut
              </a>
               lollipop dragée tootsie roll wafer lemon drops cupcake chocolate bar.
            </p>
            <p
              data-css-15w0yq1=""
            >
              Powder apple pie cookie lemon drops marzipan gummies. Chocolate lemon drops tiramisu. Cotton candy powder oat cake toffee
               
              <a
                href="#"
              >
                cotton candy
              </a>
               muffin soufflé marshmallow biscuit.
            </p>
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "flex-end",
                }
              }
            >
              <button
                data-css-r0o8hq=""
                disabled={false}
                style={Object {}}
              >
                <span
                  data-css-15b13by=""
                >
                  Secondary CTA
                </span>
              </button>
              <span
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              />
              <button
                data-css-k922kt=""
                disabled={false}
                style={Object {}}
              >
                <span
                  data-css-15b13by=""
                >
                  Primary CTA
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modal no focus on mount 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div>
      <p
        data-css-145tgfu=""
      >
        Macaroon danish I love candy macaroon danish toffee muffin. Cotton candy chupa chups cupcake I love. Chocolate I love bonbon carrot cake cupcake cookie muffin liquorice. I love I love I love jelly-o fruitcake 
        <a
          href="#"
        >
          I love chocolate cake
        </a>
         wafer chupa chups.
      </p>
      <p
        data-css-145tgfu=""
      >
        Sesame snaps cake pudding I love chupa chups I love. Cotton candy biscuit oat cake dessert donut I love lemon drops. Cookie croissant dragée tootsie roll marzipan I love. Apple pie cheesecake jelly-o cheesecake I love cheesecake.
      </p>
      <button
        data-css-k922kt=""
        disabled={false}
        onClick={[Function]}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          close modal
        </span>
      </button>
      <p
        data-css-145tgfu=""
      >
        Sweet soufflé 
        <a
          href="#"
        >
          apple pie
        </a>
        . Halvah icing pudding pastry ice cream gingerbread tart candy canes dragée. Pie gingerbread icing.
      </p>
      <div
        aria-label="Storybook Modal"
        data-css-17ouz8q=""
        id="psds-dialog__overlay"
        onClick={[Function]}
        role="region"
      >
        <div
          data-css-xf9ugk=""
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div>
            <button
              aria-label="Close dialog"
              data-css-1uhqcv0=""
              onClick={[Function]}
            >
              <svg
                aria-label="close icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
                />
              </svg>
            </button>
            <h1
              data-css-7941k5=""
              size="large"
            >
              Wowzers, a Dialog
            </h1>
            <p
              data-css-15w0yq1=""
            >
              <a
                href="#"
              >
                Brownie bear claw
              </a>
               liquorice dragée candy canes pastry topping. Chocolate cake soufflé sweet roll jelly beans oat cake donut. Wafer chocolate cake pastry chocolate bar fruitcake. Cupcake jelly-o croissant lollipop liquorice. 
              <a
                href="#"
              >
                Tart donut
              </a>
               lollipop dragée tootsie roll wafer lemon drops cupcake chocolate bar.
            </p>
            <p
              data-css-15w0yq1=""
            >
              Powder apple pie cookie lemon drops marzipan gummies. Chocolate lemon drops tiramisu. Cotton candy powder oat cake toffee
               
              <a
                href="#"
              >
                cotton candy
              </a>
               muffin soufflé marshmallow biscuit.
            </p>
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "flex-end",
                }
              }
            >
              <button
                data-css-r0o8hq=""
                disabled={false}
                style={Object {}}
              >
                <span
                  data-css-15b13by=""
                >
                  Secondary CTA
                </span>
              </button>
              <span
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              />
              <button
                data-css-k922kt=""
                disabled={false}
                style={Object {}}
              >
                <span
                  data-css-15b13by=""
                >
                  Primary CTA
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modal no focusable child element, no lock 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div>
      <p
        data-css-145tgfu=""
      >
        Macaroon danish I love candy macaroon danish toffee muffin. Cotton candy chupa chups cupcake I love. Chocolate I love bonbon carrot cake cupcake cookie muffin liquorice. I love I love I love jelly-o fruitcake 
        <a
          href="#"
        >
          I love chocolate cake
        </a>
         wafer chupa chups.
      </p>
      <p
        data-css-145tgfu=""
      >
        Sesame snaps cake pudding I love chupa chups I love. Cotton candy biscuit oat cake dessert donut I love lemon drops. Cookie croissant dragée tootsie roll marzipan I love. Apple pie cheesecake jelly-o cheesecake I love cheesecake.
      </p>
      <button
        data-css-k922kt=""
        disabled={false}
        onClick={[Function]}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          open modal
        </span>
      </button>
      <p
        data-css-145tgfu=""
      >
        Sweet soufflé 
        <a
          href="#"
        >
          apple pie
        </a>
        . Halvah icing pudding pastry ice cream gingerbread tart candy canes dragée. Pie gingerbread icing.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots modal with close button 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div>
      <p
        data-css-145tgfu=""
      >
        Macaroon danish I love candy macaroon danish toffee muffin. Cotton candy chupa chups cupcake I love. Chocolate I love bonbon carrot cake cupcake cookie muffin liquorice. I love I love I love jelly-o fruitcake 
        <a
          href="#"
        >
          I love chocolate cake
        </a>
         wafer chupa chups.
      </p>
      <p
        data-css-145tgfu=""
      >
        Sesame snaps cake pudding I love chupa chups I love. Cotton candy biscuit oat cake dessert donut I love lemon drops. Cookie croissant dragée tootsie roll marzipan I love. Apple pie cheesecake jelly-o cheesecake I love cheesecake.
      </p>
      <button
        data-css-k922kt=""
        disabled={false}
        onClick={[Function]}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          close modal
        </span>
      </button>
      <p
        data-css-145tgfu=""
      >
        Sweet soufflé 
        <a
          href="#"
        >
          apple pie
        </a>
        . Halvah icing pudding pastry ice cream gingerbread tart candy canes dragée. Pie gingerbread icing.
      </p>
      <div
        aria-label="Storybook Modal"
        data-css-17ouz8q=""
        id="psds-dialog__overlay"
        onClick={[Function]}
        role="region"
      >
        <div
          data-css-xf9ugk=""
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div>
            <button
              aria-label="Close dialog"
              data-css-1uhqcv0=""
              onClick={[Function]}
            >
              <svg
                aria-label="close icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
                />
              </svg>
            </button>
            <h1
              data-css-7941k5=""
              size="large"
            >
              Wowzers, a Dialog
            </h1>
            <p
              data-css-15w0yq1=""
            >
              <a
                href="#"
              >
                Brownie bear claw
              </a>
               liquorice dragée candy canes pastry topping. Chocolate cake soufflé sweet roll jelly beans oat cake donut. Wafer chocolate cake pastry chocolate bar fruitcake. Cupcake jelly-o croissant lollipop liquorice. 
              <a
                href="#"
              >
                Tart donut
              </a>
               lollipop dragée tootsie roll wafer lemon drops cupcake chocolate bar.
            </p>
            <p
              data-css-15w0yq1=""
            >
              Powder apple pie cookie lemon drops marzipan gummies. Chocolate lemon drops tiramisu. Cotton candy powder oat cake toffee
               
              <a
                href="#"
              >
                cotton candy
              </a>
               muffin soufflé marshmallow biscuit.
            </p>
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "flex-end",
                }
              }
            >
              <button
                data-css-r0o8hq=""
                disabled={false}
                style={Object {}}
              >
                <span
                  data-css-15b13by=""
                >
                  Secondary CTA
                </span>
              </button>
              <span
                style={
                  Object {
                    "marginLeft": 10,
                  }
                }
              />
              <button
                data-css-k922kt=""
                disabled={false}
                style={Object {}}
              >
                <span
                  data-css-15b13by=""
                >
                  Primary CTA
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose with onClose 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-2hqpvr=""
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div>
        <button
          aria-label="Close dialog"
          data-css-1uhqcv0=""
          onClick={[Function]}
        >
          <svg
            aria-label="close icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
            />
          </svg>
        </button>
        <h1
          data-css-7941k5=""
          size="large"
        >
          Wowzers, a Dialog
        </h1>
        <p
          data-css-15w0yq1=""
        >
          <a
            href="#"
          >
            Brownie bear claw
          </a>
           liquorice dragée candy canes pastry topping. Chocolate cake soufflé sweet roll jelly beans oat cake donut. Wafer chocolate cake pastry chocolate bar fruitcake. Cupcake jelly-o croissant lollipop liquorice. 
          <a
            href="#"
          >
            Tart donut
          </a>
           lollipop dragée tootsie roll wafer lemon drops cupcake chocolate bar.
        </p>
        <p
          data-css-15w0yq1=""
        >
          Powder apple pie cookie lemon drops marzipan gummies. Chocolate lemon drops tiramisu. Cotton candy powder oat cake toffee
           
          <a
            href="#"
          >
            cotton candy
          </a>
           muffin soufflé marshmallow biscuit.
        </p>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <button
            data-css-r0o8hq=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Secondary CTA
            </span>
          </button>
          <span
            style={
              Object {
                "marginLeft": 10,
              }
            }
          />
          <button
            data-css-k922kt=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Primary CTA
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition bottomCenter 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1zn26r=""
      onKeyDown={[Function]}
    >
      <div>
        <h1
          data-css-7941k5=""
          size="large"
        >
          Wowzers, a Dialog
        </h1>
        <p
          data-css-15w0yq1=""
        >
          <a
            href="#"
          >
            Brownie bear claw
          </a>
           liquorice dragée candy canes pastry topping. Chocolate cake soufflé sweet roll jelly beans oat cake donut. Wafer chocolate cake pastry chocolate bar fruitcake. Cupcake jelly-o croissant lollipop liquorice. 
          <a
            href="#"
          >
            Tart donut
          </a>
           lollipop dragée tootsie roll wafer lemon drops cupcake chocolate bar.
        </p>
        <p
          data-css-15w0yq1=""
        >
          Powder apple pie cookie lemon drops marzipan gummies. Chocolate lemon drops tiramisu. Cotton candy powder oat cake toffee
           
          <a
            href="#"
          >
            cotton candy
          </a>
           muffin soufflé marshmallow biscuit.
        </p>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <button
            data-css-r0o8hq=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Secondary CTA
            </span>
          </button>
          <span
            style={
              Object {
                "marginLeft": 10,
              }
            }
          />
          <button
            data-css-k922kt=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Primary CTA
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition bottomLeft 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-h7odnv=""
      onKeyDown={[Function]}
    >
      <div>
        <h1
          data-css-7941k5=""
          size="large"
        >
          Wowzers, a Dialog
        </h1>
        <p
          data-css-15w0yq1=""
        >
          <a
            href="#"
          >
            Brownie bear claw
          </a>
           liquorice dragée candy canes pastry topping. Chocolate cake soufflé sweet roll jelly beans oat cake donut. Wafer chocolate cake pastry chocolate bar fruitcake. Cupcake jelly-o croissant lollipop liquorice. 
          <a
            href="#"
          >
            Tart donut
          </a>
           lollipop dragée tootsie roll wafer lemon drops cupcake chocolate bar.
        </p>
        <p
          data-css-15w0yq1=""
        >
          Powder apple pie cookie lemon drops marzipan gummies. Chocolate lemon drops tiramisu. Cotton candy powder oat cake toffee
           
          <a
            href="#"
          >
            cotton candy
          </a>
           muffin soufflé marshmallow biscuit.
        </p>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <button
            data-css-r0o8hq=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Secondary CTA
            </span>
          </button>
          <span
            style={
              Object {
                "marginLeft": 10,
              }
            }
          />
          <button
            data-css-k922kt=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Primary CTA
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition bottomRight 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-1g92n04=""
      onKeyDown={[Function]}
    >
      <div>
        <h1
          data-css-7941k5=""
          size="large"
        >
          Wowzers, a Dialog
        </h1>
        <p
          data-css-15w0yq1=""
        >
          <a
            href="#"
          >
            Brownie bear claw
          </a>
           liquorice dragée candy canes pastry topping. Chocolate cake soufflé sweet roll jelly beans oat cake donut. Wafer chocolate cake pastry chocolate bar fruitcake. Cupcake jelly-o croissant lollipop liquorice. 
          <a
            href="#"
          >
            Tart donut
          </a>
           lollipop dragée tootsie roll wafer lemon drops cupcake chocolate bar.
        </p>
        <p
          data-css-15w0yq1=""
        >
          Powder apple pie cookie lemon drops marzipan gummies. Chocolate lemon drops tiramisu. Cotton candy powder oat cake toffee
           
          <a
            href="#"
          >
            cotton candy
          </a>
           muffin soufflé marshmallow biscuit.
        </p>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <button
            data-css-r0o8hq=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Secondary CTA
            </span>
          </button>
          <span
            style={
              Object {
                "marginLeft": 10,
              }
            }
          />
          <button
            data-css-k922kt=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Primary CTA
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition none 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-2hqpvr=""
      onKeyDown={[Function]}
    >
      <div>
        <h1
          data-css-7941k5=""
          size="large"
        >
          Wowzers, a Dialog
        </h1>
        <p
          data-css-15w0yq1=""
        >
          <a
            href="#"
          >
            Brownie bear claw
          </a>
           liquorice dragée candy canes pastry topping. Chocolate cake soufflé sweet roll jelly beans oat cake donut. Wafer chocolate cake pastry chocolate bar fruitcake. Cupcake jelly-o croissant lollipop liquorice. 
          <a
            href="#"
          >
            Tart donut
          </a>
           lollipop dragée tootsie roll wafer lemon drops cupcake chocolate bar.
        </p>
        <p
          data-css-15w0yq1=""
        >
          Powder apple pie cookie lemon drops marzipan gummies. Chocolate lemon drops tiramisu. Cotton candy powder oat cake toffee
           
          <a
            href="#"
          >
            cotton candy
          </a>
           muffin soufflé marshmallow biscuit.
        </p>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <button
            data-css-r0o8hq=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Secondary CTA
            </span>
          </button>
          <span
            style={
              Object {
                "marginLeft": 10,
              }
            }
          />
          <button
            data-css-k922kt=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Primary CTA
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition topCenter 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-163zepq=""
      onKeyDown={[Function]}
    >
      <div>
        <h1
          data-css-7941k5=""
          size="large"
        >
          Wowzers, a Dialog
        </h1>
        <p
          data-css-15w0yq1=""
        >
          <a
            href="#"
          >
            Brownie bear claw
          </a>
           liquorice dragée candy canes pastry topping. Chocolate cake soufflé sweet roll jelly beans oat cake donut. Wafer chocolate cake pastry chocolate bar fruitcake. Cupcake jelly-o croissant lollipop liquorice. 
          <a
            href="#"
          >
            Tart donut
          </a>
           lollipop dragée tootsie roll wafer lemon drops cupcake chocolate bar.
        </p>
        <p
          data-css-15w0yq1=""
        >
          Powder apple pie cookie lemon drops marzipan gummies. Chocolate lemon drops tiramisu. Cotton candy powder oat cake toffee
           
          <a
            href="#"
          >
            cotton candy
          </a>
           muffin soufflé marshmallow biscuit.
        </p>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <button
            data-css-r0o8hq=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Secondary CTA
            </span>
          </button>
          <span
            style={
              Object {
                "marginLeft": 10,
              }
            }
          />
          <button
            data-css-k922kt=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Primary CTA
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition topLeft 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-15k9c3c=""
      onKeyDown={[Function]}
    >
      <div>
        <h1
          data-css-7941k5=""
          size="large"
        >
          Wowzers, a Dialog
        </h1>
        <p
          data-css-15w0yq1=""
        >
          <a
            href="#"
          >
            Brownie bear claw
          </a>
           liquorice dragée candy canes pastry topping. Chocolate cake soufflé sweet roll jelly beans oat cake donut. Wafer chocolate cake pastry chocolate bar fruitcake. Cupcake jelly-o croissant lollipop liquorice. 
          <a
            href="#"
          >
            Tart donut
          </a>
           lollipop dragée tootsie roll wafer lemon drops cupcake chocolate bar.
        </p>
        <p
          data-css-15w0yq1=""
        >
          Powder apple pie cookie lemon drops marzipan gummies. Chocolate lemon drops tiramisu. Cotton candy powder oat cake toffee
           
          <a
            href="#"
          >
            cotton candy
          </a>
           muffin soufflé marshmallow biscuit.
        </p>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <button
            data-css-r0o8hq=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Secondary CTA
            </span>
          </button>
          <span
            style={
              Object {
                "marginLeft": 10,
              }
            }
          />
          <button
            data-css-k922kt=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Primary CTA
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition topRight 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-13zevtd=""
      onKeyDown={[Function]}
    >
      <div>
        <h1
          data-css-7941k5=""
          size="large"
        >
          Wowzers, a Dialog
        </h1>
        <p
          data-css-15w0yq1=""
        >
          <a
            href="#"
          >
            Brownie bear claw
          </a>
           liquorice dragée candy canes pastry topping. Chocolate cake soufflé sweet roll jelly beans oat cake donut. Wafer chocolate cake pastry chocolate bar fruitcake. Cupcake jelly-o croissant lollipop liquorice. 
          <a
            href="#"
          >
            Tart donut
          </a>
           lollipop dragée tootsie roll wafer lemon drops cupcake chocolate bar.
        </p>
        <p
          data-css-15w0yq1=""
        >
          Powder apple pie cookie lemon drops marzipan gummies. Chocolate lemon drops tiramisu. Cotton candy powder oat cake toffee
           
          <a
            href="#"
          >
            cotton candy
          </a>
           muffin soufflé marshmallow biscuit.
        </p>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <button
            data-css-r0o8hq=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Secondary CTA
            </span>
          </button>
          <span
            style={
              Object {
                "marginLeft": 10,
              }
            }
          />
          <button
            data-css-k922kt=""
            disabled={false}
            style={Object {}}
          >
            <span
              data-css-15b13by=""
            >
              Primary CTA
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
